# barista

./: .gitignore  README.md  main.py  models.py  pyproject.toml  training.md
notebooks/: .uuid  Fine Tuning.ipynb  fine-tuning-example.ipynb  fuyu.ipynb  inference_playground.ipynb  llava.ipynb  playground.ipynb  reference.ipynb  test.ipynb  test_notebook.ipynb  tokenizer-test.ipynb
notebooks/wandb/: latest-run
notebooks/wandb/run-20240128_001244-6tlujll7/files/: config.yaml  requirements.txt  wandb-metadata.json
scripts/: .uuid  create_qa_dataset.py  download_data.py
src/: clients.py  main.py  models.py  utils.py
src/inference/: constants.py  service.py  utils.py
src/scripts/: build_labeled_dataset.py  create_qa_dataset.py  download_data.py  intersection.py  remove_duplicates.py
